--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>D10 SPACE</title>
+    <title>calma tv</title>
     <link rel="shortcut icon" href="img/favico.ico">
     <link rel="stylesheet" href="bootstrap-4.1.0-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/fixed.css">
     <link rel="stylesheet" href="css/lightbox.css">
 </head>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/jquery.magnific-popup.min.js"></script>
+
 <body data-spy="scroll" data-target="navbarResponsive">
     <div id="home">
         <nav class="navbar navbar-expand-md fixed-top">
@@ -18,9 +22,11 @@
             </div>
         </nav>
 
-        <div class="landing">
-
-                    <img src="img/1.JPG" class="responsive">
+        <div class="home">
+                <a href="#headerPopup" id="headerVideoLink" target="_blank"><img src="img/1.JPG" class="responsive"></a>
+                <div id="headerPopup">
+                        <iframe class="embed-responsive-item" width="854" height="480" src="https://www.youtube.com/embed/qN3OueBm9F4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     </div> 
                     <img src="img/2.JPG" class="responsive">
                     <img src="img/3.JPG" class="responsive">
                     <img src="img/4.JPG" class="responsive">
